// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph Paragraph base demo works fine 1`] = `
<base>
  <wx-view
    class="typography-example"
  >
    <t-typography-text
      content="TDesign 是腾讯各业务团队在服务业务过程中沉淀的一套企业级设计体系。"
    />
  </wx-view>
</base>
`;

exports[`Paragraph Paragraph combination demo works fine 1`] = `
<combination>
  <wx-view
    class="typography-example typography-example--inline"
  >
    <t-typography-title
      content="What is TDesign"
    />
    <t-typography-text
      content="TDesign is an enterprise-level design system accumulated by Tencent's various business teams."
      mark="{{true}}"
    />
    <t-typography-paragraph>
      <t-typography-text
        strong="{{true}}"
      >
        
      TDesign features a unified design values, consistent design language, and visual style, helping users form
      continuous and coherent perceptions of the experience.
    
      </t-typography-text>
      
    Based on this, TDesign offers out-typography-of-the-box UI component libraries, design guidelines, and design
    assets, elegantly and efficiently freeing design and development from repetitive tasks. Simultaneously, it
    facilitates easy extension on top of TDesign, enabling a better alignment with business requirements.
  
    </t-typography-paragraph>
    <t-typography-title>
      Comprehensive
    </t-typography-title>
    <t-typography-paragraph>
      
    TDesign Support
    
      <t-typography-text
        code="{{true}}"
      >
        Vue 2
      </t-typography-text>
      , 
      <t-typography-text
        code="{{true}}"
      >
        Vue 3
      </t-typography-text>
      ,
    
      <t-typography-text
        code="{{true}}"
      >
        React
      </t-typography-text>
      
    components for Desktop Application and
    
      <t-typography-text
        code="{{true}}"
      >
        Vue 3
      </t-typography-text>
      ,
    
      <t-typography-text
        code="{{true}}"
      >
        Wechat MiniProgram
      </t-typography-text>
      
    components for Mobile Application.
  
    </t-typography-paragraph>
    <t-typography-paragraph>
      <wx-view>
        • Features
      </wx-view>
      <wx-view>
        • Comprehensive
      </wx-view>
      <wx-view
        style="padding-left: 24rpx"
      >
        • Consistency
      </wx-view>
      <wx-view
        style="padding-left: 24rpx"
      >
        • Usability
      </wx-view>
      <wx-view>
        • Join TDesign
      </wx-view>
    </t-typography-paragraph>
    <t-typography-paragraph>
      <wx-view>
        1. Features
      </wx-view>
      <wx-view>
        2. Comprehensive
      </wx-view>
      <wx-view
        style="padding-left: 24rpx"
      >
        1. Consistency
      </wx-view>
      <wx-view
        style="padding-left: 24rpx"
      >
        2. Usability
      </wx-view>
      <wx-view>
        3. Join TDesign
      </wx-view>
    </t-typography-paragraph>
  </wx-view>
</combination>
`;

exports[`Paragraph Paragraph copyable demo works fine 1`] = `
<copyable>
  <wx-view
    class="typography-example"
  >
    <t-typography-text
      content="This is a copyable text."
      copyable="{{true}}"
    />
  </wx-view>
</copyable>
`;

exports[`Paragraph Paragraph ellipsis demo works fine 1`] = `
<ellipsis>
  <wx-view
    class="typography-example typography-example--border"
  >
    <t-typography-paragraph
      content="TDesign 秉承开放的设计理念从创立之初就采用开源协作的方式进行设计和开发。协作方案讨论、组件设计以及 API 设计，包括源代码在内均在公司内部完全开放，赢得了内部开发者和设计师的广泛关注。TDesign 遵循平等、开放、严格的原则，不论参与者的角色如何。"
      ellipsis="{{true}}"
    />
  </wx-view>
  <wx-view
    class="typography-example"
  >
    <t-typography-paragraph
      content="TDesign 秉承开放的设计理念从创立之初就采用开源协作的方式进行设计和开发。协作方案讨论、组件设计以及 API 设计，包括源代码在内均在公司内部完全开放，赢得了内部开发者和设计师的广泛关注。TDesign 遵循平等、开放、严格的原则，不论参与者的角色如何。"
      ellipsis="{{
        Object {
          "collapsible": true,
          "expandable": true,
          "row": 2,
        }
      }}"
    />
  </wx-view>
</ellipsis>
`;

exports[`Paragraph Paragraph theme demo works fine 1`] = `
<theme>
  <wx-view
    class="typography-example typography-example--theme"
  >
    <t-typography-text
      content="常规"
      theme="primary"
    />
    <t-typography-text
      content="主色"
      theme="secondary"
    />
    <t-typography-text
      content="成功"
      theme="success"
    />
    <t-typography-text
      content="警告"
      theme="warning"
    />
    <t-typography-text
      content="错误"
      theme="error"
    />
    <t-typography-text
      content="标记"
      mark="{{true}}"
    />
  </wx-view>
</theme>
`;
